[project]
name = "agentgrad"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "box2d>=2.3.10",
    "gymnasium[all]>=1.0.0",
    "hydra-core>=1.3.2",
    "loguru>=0.7.3",
    "python-dotenv>=1.0.1",
    "swig>=4.3.0",
    "torch>=2.5.1",
    "wandb>=0.19.1",
]

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "ruff>=0.8.3",
]
